--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,28 @@ body{
 	font-size: 12px;
 	line-height: 17px;
 }
+
+
+
+/*plugins*/
+
+
+#coin-slider-coin-slider{
+	background: none repeat scroll 0 0 #FFFFFF;
+	float: left;
+	height: 415px;
+	margin-right: 20px;
+	overflow: hidden;
+	position: relative;
+	width: 620px;
+	z-index: 2;
+}
+
+#cs-buttons-coin-slider{
+	background: url("../images/pigination-bg.png") repeat scroll left top rgba(0, 0, 0, 0);
+	border-radius: 2px;
+	bottom: 11px;
+	left: 272px;
+	padding: 5px 2px 8px 6px;
+	position: absolute;
+}
