--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,19 @@ body{
 }
 
 
+/*slider-banner*/
+
+.brns-wrap{
+	width: 300px;
+}
+
+.brns-item{
+	width: 300px;
+	height: 200px;
+	display: block;
+	margin-bottom: 15px;
+	border: 1px solid #fff;
+}
 
 /*plugins*/
 
@@ -20,6 +33,8 @@ body{
 	position: relative;
 	width: 620px;
 	z-index: 2;
+	border: 1px solid #ccc;
+
 }
 
 #coin-slider {
