--- a/css/global.css
+++ b/css/global.css
@@ -17,6 +17,35 @@ display: table; /* 2 */
   margin:0 auto;
 }
 
+.g-input-txt{
+  background: #fff;
+   font-family: Arial,Helvetica,sans-serif;
+   font-size: 12px;
+   border: none;
+   padding: 7px 2px;
+}
+
+.g-input-txt:focus{
+  background: #FCFCFC;
+}
+
+input[type=text],input[type=password],input[type=email]{
+    background: #fff;
+   font-family: Arial,Helvetica,sans-serif;
+   font-size: 12px;
+   border: none;
+  padding: 7px 2px;
+}
+
+
+.g-input-submit{
+  height: 28px;
+  border: none;
+  padding: 2px 5px;
+  cursor: pointer;
+  background: transparent url('../images/line-pattern.png') left top repeat;
+}
+
 
 *, *:before,*:after{
   -webkit-box-sizing: border-box;
@@ -80,6 +109,10 @@ html {
 html, body {
     margin: 0;
     padding:0;
+}
+h1,h2, h3, h4, h5, h6{
+  margin: 0;
+  padding: 0;
 }
 
 
