--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ body{
 /*main nav menu*/
 
 .main-nav-wrap{
-	padding: 20px 0;
+	padding: 12px 0;
 	border-style: solid;
 	border-width: 1px 0;
 	border-color: #D8D8D7;
@@ -133,16 +133,18 @@ body{
 	background: #C0D722;
 	display: inline-block;
 	vertical-align: middle;
-	margin: 0 15px;
+	margin: 0 13px;
 	-webkit-border-radius: 50%;
 	-moz-border-radius: 50%;
 	border-radius: 50%;
+	margin-top: -4px;
 }
 
 .main-nav-item-url_one{
 	text-decoration: none;
 	text-transform: uppercase;
-	font-family: ;
+	font-weight: 700;
+	font-family: 'PT Sans Narrow', sans-serif;
 	font-size: 21px;
 	color: #878B84
 }
