update dropdown menu

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,8 @@ body{
 	text-transform: uppercase;
 	font-weight: bold;
 	color: #fff;
+	font-family: 'PT Sans Narrow', sans-serif;
+	
 	-webkit-transition: all 0.7s;
 	-moz-transition: all 0.7s;
 	-ms-transition: all 0.7s;
@@ -66,7 +68,7 @@ body{
 
 .log-reg-wrap{
 	right: 90px;
-	top: 90px;
+	top: 100px;
 }
 
 .login{
@@ -81,8 +83,8 @@ body{
 }
 
 .cart-wrap{
-	right: 10px;
-	top:60px;
+	right: 0;
+	top:70px;
 	width: 70px;
 	height: 70px;
 }
@@ -92,18 +94,21 @@ body{
 	width: inherit;
 	height: inherit;
 	text-align: center;
-	display: table;
+	display: block;
 	text-decoration: none;
 }
 
 .item-count{
-	display: table-cell;
+	display: inline-block;
 	vertical-align: middle;
-	font-size: 31px;
+	font-size: 33px;
 	color: #fff;
+	font-family: 'PT Sans Narrow', sans-serif;
+	font-weight: 700;
+	margin-top: 30px;
 }
 
-.item-count:hover{
+.cart-wrap:hover .item-count{
 	color: #467628;
 }
 
@@ -140,8 +145,11 @@ body{
 	margin-top: -4px;
 }
 
-.main-nav-item-url_one{
+.main-nav-item-url{
 	text-decoration: none;
+}
+
+.main-nav-item-url_one{
 	text-transform: uppercase;
 	font-weight: 700;
 	font-family: 'PT Sans Narrow', sans-serif;
@@ -155,6 +163,31 @@ body{
 
 .main-nav-item_one:first-child:before{
 	display: none;
+}
+
+.main-nav-sub{
+	padding: 10px;
+	z-index: 20;
+	font-family: 	Arial,​Helvetica,​sans-serif;
+	text-transform: uppercase;
+	font-size: 11px;
+	width: 120%;
+	font-weight: bold;
+	background: transparent url('../images/forbg.gif') 0 0 repeat;
+}
+
+.main-nav-sub_subsub{
+	left: 100%;
+	top: 0;
+}
+
+.main-nav-item-url_two, .main-nav-item-url_three{
+	color: #fff;
+	padding: 10px;
+}
+
+.main-nav-item-url_two:hover, .main-nav-item-url_three:hover{
+	color: #E1F840;
 }
 
 
