--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,10 @@ body{
 	transition: all 0.4s;
 }
 
+.main-nav-item.lastItem .main-nav-sub_sub{
+	right: 0;
+}
+
 .main-nav-item:hover > .main-nav-sub_sub{
 	top: 150%;
 	visibility: visible;
@@ -222,11 +226,29 @@ body{
 	right: -90%;
 }
 
+.main-nav{
+	display: table;
+}
+
+.main-nav-item.lastItem .main-nav-item_two.has:hover > a:before{
+	position: relative;
+	right: 10px;
+	-webkit-transform: rotate(-180deg);
+	-moz-transform: rotate(-180deg);
+	-ms-transform: rotate(-180deg);
+	-o-transform: rotate(-180deg);
+	transform: rotate(-180deg);
+}
+
 
 .main-nav-item_two.has:hover .main-nav-sub_subsub{
 	left:100%;
 	opacity:1;
 	visibility: visible;
+}
+
+.main-nav-item.lastItem .main-nav-item_two.has:hover .main-nav-sub_subsub{
+	left: -130%;
 }
 
 
@@ -247,6 +269,7 @@ body{
 	-o-transition: all 0.4s;
 	transition: all 0.4s;
 	height: 0;
+	vertical-align: middle;
 	display: inline-block;
 	border-style: solid;
 	border-width: 6px;
