--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,7 @@ body{
 .main-nav-sub_subsub{
 	left: 206%;
 	top: 0;
+	z-index: -1 !important;
 	opacity: 0;
 	visibility: hidden;
 	-webkit-transition: all 0.4s;
