--- a/css/style.css
+++ b/css/style.css
@@ -313,15 +313,56 @@ body{
 }
 
 .item-lists-title{
-	padding:30px 30px 20px 30px;
+	padding:30px;
 }
 
 .item-lists-item{
 	width: 166px;
 	height: 240px;
-	background: #000;
 	margin-left: 30px;
 	margin-bottom: 30px;
+}
+
+.item-lists-item-url{
+	width: 100%;
+	height: 135px;
+	display: block;
+	overflow: hidden;
+	margin-bottom: 30px;
+	position: relative;
+}
+
+.item-lists-item-url:before{
+	content: '';
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+	border: 3px solid #fff;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	-ms-transition: all 0.3s;
+	-o-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.item-lists-item-url:hover:before{
+	border-width: 0;
+}
+
+.item-lists-item-title{
+	min-height: 40px;
+	overflow:hidden;
+	margin-bottom: 5px;
+}
+
+.item-lists-item-title-url{
+	color: #61983E;
+}
+
+.item-lists-item-title-url:hover{
+	color: #F5AB02;
 }
 
 .sidebar{
