--- a/css/style.css
+++ b/css/style.css
@@ -368,7 +368,7 @@ body{
 .item-lists-item-buy{
 	background: transparent url('../images/forbg.gif') 0 0  repeat;
 	display: block;
-	padding: 8px 7px;
+	padding: 8px 4px 9px 8px;
 	color: #fff;
 	font-size: 12px;
 	font-weight: bold;
@@ -380,9 +380,29 @@ body{
 	vertical-align: middle;
 	width: 0;
 	height: 0;
+	position: relative;
+	left: 0;
+	margin-left: 4px;
 	border-style: solid;
 	border-width: 6px;
 	border-color: transparent transparent transparent #fff;
+	-webkit-transition: all 0.2s;
+	-moz-transition: all 0.2s;
+	-ms-transition: all 0.2s;
+	-o-transition: all 0.2s;
+	transition: all 0.2s;
+}
+
+.item-lists-item-price{
+	padding-top: 6px;
+}
+
+.item-lists-item-buy:hover{
+	opacity: 0.7;
+}
+
+.item-lists-item-buy:hover:after{
+	left: 4px;
 }
 
 .sidebar{
