--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,17 @@
+html{
+	height: 100%;
+	min-height: 100%;
+}
+
 body{
 	background: url("../images/body-bg.gif") repeat scroll left top rgba(0, 0, 0, 0);
 	color: #878B84;
 	font-family: Arial,Helvetica,sans-serif;
 	font-size: 12px;
 	line-height: 17px;
+	position: relative;
+	min-height: 100%;
+	padding-bottom: 100px;
 }
 
 /*header*/
@@ -462,6 +470,18 @@ body{
 
 .sidebar-item-old-price{
 	padding-bottom: 5px;
+}
+
+/*main-foot*/
+
+.main-foot{
+	padding-top: 40px;
+	border-top: 1px solid #E0E0E0;
+	margin-top: 50px;
+	height: 100px;
+	position: absolute;
+	bottom: 0;
+	left: 0;right: 0;
 }
 
 
