--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body{
 	line-height: 17px;
 	position: relative;
 	min-height: 100%;
-	padding-bottom: 100px;
+	padding-bottom: 140px;
 }
 
 /*header*/
@@ -477,14 +477,44 @@ body{
 .main-foot{
 	padding-top: 40px;
 	border-top: 1px solid #E0E0E0;
-	margin-top: 50px;
+	
 	height: 100px;
 	position: absolute;
-	bottom: 0;
-	left: 0;right: 0;
+	bottom: 40px;
+	left: 0;
+	right: 0;
 }
 
+.bottom-nav-item{
+	color: #878B84;
+	margin-left: 15px;
+	text-decoration: none;
+}
 
+.bottom-nav-item:first-child{
+	margin-left: 0;
+}
+
+.bottom-nav-item:hover{
+	color: #72B349;
+}
+
+.copy *{
+	color: #72B349;
+	font-size: 12px;
+}
+
+.copy-site{
+	text-decoration: none;
+}
+
+.copy-site:hover{
+	color: #F5AB02;
+}
+
+.cms:hover{
+	text-decoration: none;
+}
 
 
 
