--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,21 @@ body{
 	padding-bottom: 140px;
 }
 
+.main-wrap{
+	overflow: hidden;
+	padding-top: 19px;
+	position: relative;
+	top: -17px;
+	z-index: 20;
+}
+
 /*header*/
 
 .head-wrap{
 	background: transparent url('../images/top-bg.gif') left top repeat-x;
 	min-height: 170px;
+	position: relative;
+	z-index: 22;
 }
 
 .top-nav{
@@ -62,7 +72,6 @@ body{
 	font-weight: bold;
 	color: #fff;
 	font-family: 'PT Sans Narrow', sans-serif;
-	
 	-webkit-transition: all 0.7s;
 	-moz-transition: all 0.7s;
 	-ms-transition: all 0.7s;
@@ -317,6 +326,90 @@ body{
 .main-content{
 	margin-bottom: 40px;
 }
+
+/*catalog-page*/
+
+.cat-description{
+	width:90%;
+	margin:-10px auto 10px;
+	padding: 20px;
+	background: transparent url('../images/forbg.gif') 0 0 repeat;
+	color: #fff;
+}
+
+.sub-cat-wrap{
+	width: 90%;
+	margin:0 auto 20px;
+	padding-top: 15px;
+	border: 1px solid #ECEAEA;
+	background: #fff;
+}
+
+.sub-cat-item{
+	width: 166px;
+	border: 1px solid #ECEAEA;
+	margin: 0 0 20px 15px;
+}
+
+.sub-cat-url{
+	display: block;
+	color:#5E943C;
+}
+
+.sub-cat-url:hover{
+	 color: #9BCB7C;
+}
+
+.sub-cat-title{
+	padding: 10px 7px;
+	display: block;
+}
+
+.sub-cat-img{
+	width: 100%;
+	height: 135px;
+	overflow: hidden;
+}
+
+.item-count-per-page{
+	font-size: 12px;
+	color: #878B84;
+	width: 90%;
+	margin:10px auto 20px;
+}
+
+.per-page-text{
+	padding-top: 10px;
+}
+
+.filter-sorting-wrap{
+	background: transparent url('../images/forbg.gif') 0 0 repeat;
+	padding: 20px;
+	width: 90%;
+	margin: 0 auto 20px;
+}
+
+
+
+.pagination-item{
+	display: inline-block;
+	padding: 6px 10px;
+	text-decoration: none;
+	text-align: center;
+	color: #878B84;
+	border: 1px solid #ddd;
+}
+
+.pagination-item:hover{
+	border-color: #fff;
+}
+
+.pagination-item.active{
+	background: transparent url('../images/forbg.gif') 0 0 repeat;
+	color: #fff;
+}
+
+
 
 /*item-lists*/
 
