--- a/css/style.css
+++ b/css/style.css
@@ -514,9 +514,13 @@ body{
 
 /*filters*/
 
-.filtering{
+.filtering, .sorting{
 	width: 55%;
 	color: #fff;
+}
+
+.sorting{
+	width: 40%;
 }
 
 .filter-title{
@@ -534,11 +538,39 @@ body{
 	width: 170px;
 }
 
+.sorting .filter-select{
+	width: 100%;
+}
+
 .low-price, .hight-price{
 	width: 50px;
 	height: 20px;
 	padding: 0 !important;
 }
+
+.filter-sorting-submit-wrap{
+	margin-top: 20px;
+}
+
+.filter-button{
+	background: none;
+	border:1px solid #ddd;
+	width: 47%;
+	padding: 7px;
+	margin-left: 10px;
+	cursor: pointer;
+	color: #fff;
+}
+
+.filter-button:first-child{
+	margin-left: 0;
+}
+
+.filter-button:hover{
+	border-color: #fff;
+}
+
+
 
 /*sidebar*/
 
