--- a/css/style.css
+++ b/css/style.css
@@ -570,6 +570,110 @@ body{
 	border-color: #fff;
 }
 
+/*item*/
+
+.item-image-part{
+	width: 40%;
+	height: 250px;
+}
+
+.item-info-part{
+	width: 54%;
+	padding: 7px;
+}
+
+.item-short-description{
+	padding-bottom: 10px;
+	margin-bottom: 10px;
+	border-bottom: 1px solid #ECEAEA;
+}
+
+.item-properties{
+	text-transform: capitalize;
+	margin-bottom: 10px;
+}
+
+.property-title{
+	font-weight: bold;
+	padding-right: 10px;
+}
+
+.item-price{
+	margin-right: 10px;
+}
+
+.item-price-part{
+	margin-bottom: 10px;
+}
+
+.item-quantity-wrap{
+	display: inline-block;
+	width: 80px;
+	padding-right: 40px;
+	border:1px solid #ECEAEA;
+	margin-left: 4px;
+}
+
+.qunatity-button{
+	width: 30px;
+	height: 50%;
+	right: 0;
+	background: #F6B702;
+	display: block;
+	cursor: pointer;
+	overflow: hidden;
+	text-align: center;
+}
+
+.qunatity-button.plus{
+	top:0;
+	border-bottom: 1px solid #fff;
+}
+
+.qunatity-button.plus:before{
+	content: '';
+	position: relative;
+	display: inline-block;
+	width: 0;
+	height: 0;
+	top:-3px;
+	border-style: solid;
+	border-width: 7px;
+	border-color: transparent transparent #fff transparent;
+}
+
+.qunatity-button.minus:before{
+	content: '';
+	position: relative;
+	bottom:-4px;
+	display: inline-block;
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 7px;
+	border-color: #fff transparent transparent transparent;
+}
+
+.qunatity-button.minus{
+	bottom:0;
+}
+
+.item-quantity-input{
+	width: 100%;
+	height: 30px;
+	color: #878B84;
+	text-align: center;
+	font-weight: bold;
+}
+
+.buy-zone{
+	overflow: hidden;
+}
+
+.item-buy{
+	background: #F6B702;
+}
+
 
 
 /*sidebar*/
