--- a/css/global.css
+++ b/css/global.css
@@ -124,6 +124,33 @@ input[type=text],input[type=password],input[type=email]{
   clear: right;
 }
 
+
+
+/*editor*/
+
+.editor {
+  color: #878B84;
+  font-size: 12px;
+  font-family: Arial,​Helvetica,​sans-serif;
+}
+
+.editor p{
+  margin: 4px 0;
+}
+
+.editor a{
+  text-decoration: none;
+  color: #72B349;
+}
+
+.editor a:hover{
+  text-decoration: underline;
+}
+
+
+/*END editor*/
+
+
 article,
 aside,
 details,
